<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- I think we can do up to 6 items-->
    <item
        android:id="@+id/eat_options"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_eat_options"/>
    <item
        android:id="@+id/groceries"
        android:icon="@drawable/round_format_list_bulleted_24"
        android:title="@string/title_groceries" />
    <item
        android:id="@+id/chat"
        android:icon="@drawable/ic_message"
        android:title="@string/title_chat" />
    <item
        android:id="@+id/eat"
        android:icon="@drawable/baseline_fastfood_24"
        android:title="@string/eat_in_out" />
    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_setting_bold"
        android:title="@string/title_settings" />

<!--
    <item
        android:id="@+id/user_profile"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard"/>
-->



<!--    <item
        android:id="@+id/eat_in"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_eat_in"/>

    <item
        android:id="@+id/eat_out"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_eat_out"/>-->




</menu>